@@ -4,6 +4,8 @@ sbin_PROGRAMS = setkey
 AM_CFLAGS = -I${top_srcdir}/src/libipsec @GLIBC_BUGS@
 AM_YFLAGS = -d
 
+BUILT_SOURCES = parse.h
+
 setkey_SOURCES = \
   setkey.c \
   parse.y \
@@ -18,4 +20,3 @@ man8_MANS = setkey.8
 
 EXTRA_DIST = ${man8_MANS} sample-policy01.cf sample-policy02.cf sample.cf \
 	scriptdump.pl test-pfkey.c
-DISTCLEANFILES = token.c parse.c parse.h
